# named-generics-bundle.rs

./: Cargo.toml  README.md  cargo_publish.sh  rust-toolchain.toml
.github/workflows/: CI.yml  future-proof.yml
src/: _lib.rs  compile_fail_tests.md  const_helpers.rs  tests.rs
src/proc_macros/: Cargo.toml  _mod.rs  args.rs  validate_module_path.rs
tests/: main.rs  renamed_crate.rs
