# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
[lib]
path = "src/_lib.rs"

[package]
name = "named-generics-bundle"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
]
version = "0.1.0-rc3"  # Keep in sync
edition = "2024"
rust-version = "1.87.0"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/named-generics-bundle.rs"
documentation = "https://docs.rs/named-generics-bundle"
readme = "README.md"

description = 'Convenience macros to help with the "bundle multiple generic params with a helper trait" pattern'
keywords = ["named", "generics", "bundle", "dyn", "trait"]

[features]
default = [
]

# unstable! Will probably use nightly to improve doc quality
better-docs = []

ui-tests = [
    "better-docs",
]

# `docs-rs` is very similar to `better-docs`, but for it being allowed to enable
# other features as well, often to make sure optional/non-`default` features
# make it to the rendered docs (using `--all-features` instead is not that great).
docs-rs = [
    "better-docs",
]

__internal_testing = []

[dependencies]
implied-bounds.version = "0.1.0"
implied-bounds.default-features = false

[dependencies.named-generics-bundle-proc_macros]
path = "src/proc_macros"
version = "=0.1.0-rc3"  # Keep in sync

[dev-dependencies]

[dev-dependencies.named-generics-bundle]
path = "."
features = ["__internal_testing"]

[workspace]
members = [
    "src/proc_macros",
]

[package.metadata.docs.rs]
features = [
    "docs-rs",
]
rustdoc-args = [
    # Use (with or without `open`):
    # ```md
    # <details open class="custom"><summary><span class="summary-box"><span>Click to hide</span></span></summary>
    # …
    # </details>
    # ```
    # to get nice drop-down menus (and avoid the css bug with rustdoc).
    "--html-before-content", "fix-docsrs-li-details-summary.html",
]
